Adding indicator dialog.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,4 @@
-<StackLayout>
+<StackLayout  modal-dialog-host>
     <Label text="Tap the button" class="title"></Label>
     
     <Button text="TAP" (tap)="onTap()"></Button>
